buildpacks/nodejs-corepack/src/snapshots/errors___corepack_version_parse_error.snap
---
source: buildpacks/nodejs-corepack/src/errors.rs
---
- Debug Info:
  - Failed to parse version.

! Failed to parse Corepack version
!
! Unexpected version output returned from `corepack --version`.
!
! The causes for this error are unknown. We do not have suggestions for diagnosis or a workaround at this time. You can help our understanding by sharing your buildpack log and a description of the issue at:
! https://github.com/heroku/buildpacks-nodejs/issues
!
! If you're able to reproduce the problem with an example application and the `pack` build tool (https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/), adding that information to the discussion will also help. Once we have more information around the causes of this error we may update this message.
